Canvas related bug fixes Presentational: 	Fix radio buttons not vertically aligned properly with their 	labels. 		Fix inadequate spacing between radio buttons in horizontal 		layout mode. 		Functional: 			Fix negative circle and ellipse radii causing 			browser slowdown. 				Fix off-screen canvases were prevented as 				a future possibility because of usage of 				.parentElement to set colour of the dialog 				background. 				Conceptual: 					Separated "options" parameter of 					radio buttons and "comboboxes" 					into separate "values" and 					"labels" so the visual display can 					be changed without affecting 					construals' internal logic. 						Renamed Combobox function 						to DropDownList because 						that's what it implements, 						not a combobox. 							Added new Combobox 							function that 							creates real 							comboboxes (work 							in progress). 								Added 								optional 								label 								parameter 								to 								Checkbox 								function 								to enable 								adding a 								text label 								without 								needing to 								know the 								width of 								the 								checkbox.

--- a/css/eden.css
+++ b/css/eden.css
@@ -28,8 +28,8 @@ body::-webkit-scrollbar-thumb {
 	background-color: rgba(255, 255, 255, 0.2);
 }
 
-input[type=checkbox] {
-	vertical-align: -0.25em;
+input[type=checkbox], input[type=radio] {
+	vertical-align: middle;
 }
 
 ul li {
@@ -71,6 +71,12 @@ h2, ul li {
 	border-width: 1px;
 	margin: 0px;
 	padding: 2px;
+}
+
+.canvas-horizontal-radio-buttons {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .unpadded-dialog .ui-dialog-content {
